force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__DoseNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__DoseNumber__c</fullName>
    <label>Dose</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DoseNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>