force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__DoseUnitId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DoseUnitId__c</fullName>
    <label>DoseUnit</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DoseUnitId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>