force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpirationDate__c</fullName>
    <label>ExpirationDate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExpirationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>