force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__ImmunizationStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ImmunizationStatus__c</fullName>
    <label>Immunization Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ImmunizationStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>