force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__InformationSourceCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__InformationSourceCodeId__c</fullName>
    <label>Information Source Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InformationSourceCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>