force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>ssot__Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Manufacturer</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>