force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__MedicationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MedicationId__c</fullName>
    <label>Medication</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MedicationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>