force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__MedicationMethodOfAdministration__c.field-meta.xml
<CustomField>
    <fullName>ssot__MedicationMethodOfAdministration__c</fullName>
    <label>Medication Method Of Administration</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MedicationMethodOfAdministration</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>