force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__PatientMedicationRequestId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PatientMedicationRequestId__c</fullName>
    <label>Patient Medication Request Id</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PatientMedicationRequestId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>