force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__RecommendedDosesText__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecommendedDosesText__c</fullName>
    <label>Recommended Dose</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecommendedDosesText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>