force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__rel_1716723514737_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716723514737_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatientImmunization_MedicationId_map_rel</label>
    <referenceTo>ssot__Medication__dlm</referenceTo>
    <relationshipLabel>PatientImmunization_MedicationId_map_rel</relationshipLabel>
    <relationshipName>rel_1716723514737_end</relationshipName>
    <type>Lookup</type>
</CustomField>