force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__rel_1716723518383_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716723518383_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatientImmunization_PatientId_map_Pa_rel</label>
    <referenceTo>ssot__Patient__dlm</referenceTo>
    <relationshipLabel>PatientImmunization_PatientId_map_Pa_rel</relationshipLabel>
    <relationshipName>rel_1716723518383_end</relationshipName>
    <type>Lookup</type>
</CustomField>