force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__RouteCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RouteCodeId__c</fullName>
    <label>Route Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RouteCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>