force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__SubpotencyReasonCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubpotencyReasonCodeId__c</fullName>
    <label>Subpotency Reason Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubpotencyReasonCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>