force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__TargetDiseaseCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__TargetDiseaseCodeId__c</fullName>
    <label>Target Disease Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TargetDiseaseCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>