force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__VaccinationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__VaccinationDate__c</fullName>
    <label>Vaccination Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VaccinationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Date</type>
</CustomField>