force-app/main/default/objects/ssot__PatientImmunization__dlm/fields/ssot__VaccineCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__VaccineCodeId__c</fullName>
    <label>Vaccine Code</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VaccineCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>